test/errors/duplicate_param.kbn
夫倍者術也
受甲甲
答甲
術畢

令甲爲一
書用倍術
